# jupy_rise_toolkit

./: LICENSE.md  Paket_WRMS.toml  README.md  ipynb_for_teaching.toml  jupy_rise_toolkit.toml  pyproject.toml
Paket_WRMS/: RISEmagic.py  create_footer.py  generate_qrcode.py
ipynb_for_teaching/: generate_csv_TUcloud.py
jupy_rise_toolkit/: __init__.py  create_template.py  create_template_2.py  generate_qrcode.py  ipynb2pdf.py  ipynb2pdf_from_nb.py
jupy_rise_toolkit/jupy_rise_toolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
