[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jupy_rise_toolkit"              
version = "0.1.0"                
description = "This package provides some hepler function for using juypter notebooks in teaching."
readme = "README.md"
license = { text = "MIT" }      
authors = [
  { name = "Tobias Bernstein", email = "tobias.bernstein@tu-ilmenau.de" },
  { name = "Thomas Hotz", email = "thomas.hotz@tu-ilmenau.de" }
]
dependencies = [
  "nbformat >= 5.9.2",
  "notebook >= 6.4.12",
  "nbconvert >= 7.16.4",
  "IPython >= 8.17.2",
  "numpy >=1.26.4",
  "natsort >=8.4.0",
  "pypdf >=4.1.0",
  "qrcode >=8.1",
  "requests >=2.31.0",
  "pandas >=2.1.4"
]
requires-python = ">=3.11"

[tool.setuptools.package-data]
"jupy_rise_toolkit" = [
  "data/jupy_logo.png",
  "data/jupy_logo_LICENSE.txt"]


[tool.setuptools.packages.find]
where = ["jupy_rise_toolkit"]